# quantikai

./: .gitignore  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  requirements_dev.txt  script.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/quantikai/: __init__.py  cli.py  game_elements.py  main.py  minmax.py  play.py  wsgi.py
src/quantikai/bot/: __init__.py  comparison.py  main.py  minmax.py  montecarlo.py
src/quantikai/bot/montecarlo/: __init__.py  game_tree.py  main.py  node.py  score.py
src/quantikai/game/: __init__.py  board.py  enums.py  exceptions.py  move.py  player.py
src/quantikai/web/static/: index.css  index.js
src/quantikai/web/templates/: index.html
tests/: __init__.py  test_game_elements.py  test_minmax.py  test_quantikai.py
tests/bot/: test_minmax.py  test_montecarlo.py
tests/bot/montecarlo/: test_game_tree.py  test_montecarlo.py
tests/game/: test_board.py
