[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quantikai"
version = "0.1.0"
description = "Play Quantik with an AI"
readme = "README.md"
authors = [
  {name = "Esadruhn"}
]
maintainers = [
  {name = "Esadruhn"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "black",  # linting
    "flake8",  # linting
    "pytest",  # testing
]

[project.urls]

bugs = "https://github.com/esadruhn/quantikai/issues"
changelog = "https://github.com/esadruhn/quantikai/blob/master/changelog.md"
homepage = "https://github.com/esadruhn/quantikai"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

